Bug 218129 - krita cannot select predefined smudge brush
Summary: krita cannot select predefined smudge brush
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (show other bugs)
Version: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-10 16:06 UTC by steve
Modified: 2010-03-10 11:22 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2009-12-10 16:06:02 UTC
Version:           2.1.0 (using 4.3.4 (KDE 4.3.4) "release 2", KDE:43 / openSUSE_11.2)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.31.5-0.1-default

Smudge brush in Krita. Selecting the smudge brush only smudges with autobrush selected. I've lowered the rate but cannot select a predefined brush.
Comment 1 Sven Langkamp 2010-03-03 10:43:34 UTC
Fixed in svn.
Comment 2 steve 2010-03-03 12:50:08 UTC
On Wednesday 03 March 2010 10:43:46 Sven Langkamp wrote:
> https://bugs.kde.org/show_bug.cgi?id=218129
> 
> 
> Sven Langkamp <sven.langkamp@gmail.com> changed:
> 
>            What    |Removed                     |Added
> ---------------------------------------------------------------------------
> - Status|NEW                         |RESOLVED
>          Resolution|                            |FIXED
> 
> 
> 
> 
> --- Comment #1 from Sven Langkamp <sven langkamp gmail com>  2010-03-03
>  10:43:34 --- Fixed in svn.
> 

Hi Sven. That's great news. Thanks so much.
I'm using kde 4.3.5 from OpenSUSE 11.2. Is it possible to install your the new 
svn version?
Comment 3 LukasT 2010-03-03 13:09:10 UTC
Hi Steve, you can follow this to build your own build if you are brave enough.
http://wiki.koffice.org/index.php?title=Build_KOffice

You are welcomed on IRC at #krita and we will gladly assist you to compile up-to-date Krita.
Comment 4 Will Stephenson 2010-03-03 13:52:14 UTC
Which revision is it fixed in?  

Is it fixed in 2.1 branch or trunk?  

We have KOffice 2.1 packages built for the reporter's openSUSE 11.2+4.3.5 in the build service, so if the fix can be applied to these, we can save them the hassle of building from SVN.
Comment 5 lynn 2010-03-03 14:07:07 UTC
On Wednesday 03 March 2010 13:52:16 Will Stephenson wrote:
> https://bugs.kde.org/show_bug.cgi?id=218129
> 
> 
> Will Stephenson <wstephenson@kde.org> changed:
> 
>            What    |Removed                     |Added
> ---------------------------------------------------------------------------
> - CC|                            |wstephenson@kde.org
> 
> 
> 
> 
> --- Comment #4 from Will Stephenson <wstephenson kde org>  2010-03-03
>  13:52:14 --- Which revision is it fixed in?
> 
> Is it fixed in 2.1 branch or trunk?
> 
> We have KOffice 2.1 packages built for the reporter's openSUSE 11.2+4.3.5
>  in the build service, so if the fix can be applied to these, we can save
>  them the hassle of building from SVN.
> 

Hi

opensuse 11.2 krita 2.1.1 using kde 4.3.5 release 3

Some predefined smudge brushes work (eg the green pepper) others don't (such 
as the diagonal lines).

In this version, the brush chosen does not apper alongside where it says 
'Smudge Brush'. Instead, there is a blank drop down menu.

But hey, thanks. It's a lot better than it used to be.

Lynn x
Comment 6 Cyrille Berger 2010-03-03 14:42:07 UTC
SVN commit 1098327 by berger:

Fix: krita cannot use predefined smudge brush

Backport to branch/2.1

BUG:218129


 M  +2 -1      kis_smudgeop.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1098327
Comment 7 Will Stephenson 2010-03-10 11:22:35 UTC
Patch added to openSUSE KKFD rpms.