Fix: krita cannot use predefined smudge brush

Backport to branch/2.1

BUG:218129

svn path=/branches/koffice/2.1/koffice/; revision=1098327